--- a/Readme
+++ b/Readme
@@ -1,4 +1,6 @@
-Файлы G1,G2,G3,G4 содержат гаммы для использования в шифре Вернама. 
+Файлы G1,G2,G3,G4 содержат гаммы для использования в шифре Вернама.
+G1 и G2 - равновероятностные массивы гамма. Т.е. вероятность встретить каждый символ в них - одинакова.
+G3 и G4 - неравновероятностные массивы гамма. Таким образом вышеописанного требования к ним не представляется.
 Файлы text1, text2 являются исходными для шифрования.
 Файлы encryptText1, encryptText2, encryptText3, encryptText4, encryptText5, encryptText6 являются выходными файлами программы.
 encryptText1 <- G1 + Text1
